--- a/www/css/index.css
+++ b/www/css/index.css
@@ -108,3 +108,25 @@ h1 {
         background-image:linear-gradient(to bottom, #585858 0%, #1B1B1B 51%);
     }
 }
+
+/*
+ * ...deixar els continguts que existissin prèviament...
+ */
+ 
+/* body fix: perquè ocupi tota la pantalla */
+html, body {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: column;
+  }
+   
+  /*
+   * afegir la class tabs-content a cada div de contingut
+   * per solucionar el contingut scollable de cada pestanya
+   */
+  .tabs-content {
+    height: 100%;
+    overflow-y: scroll !important;
+  }
